--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <hr/>
                 <!--split the bill-->
                 <label id="split">
-                    Split the bill?&nbsp;
+                    Split the bill?<br />
                 <input type="text" id="numPaychecks" /> &nbsp;ways
                 </label>
                 <!--calculate total button-->
