--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <input type="text" id="numPaychecks" /> &nbsp;ways
                 </label>
                 <!--calculate total button-->
-                <button type="button" id="calculate">Let's Give!</button>
+                <a href="#totalTithe"><button type="button" id="calculate">Let's Give!</button></a>
             </form>
             
         </div><!--calculator-->
