--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <br />
         <!--about text at bottom of calculator-->
         <div id="aboutBox" >
-            <small id="aboutSite"><a>About</a></small>
+            <small id="aboutSite"><a>About</a><br />or % input overrides chosen option</small>
         </div><!--endaboutbox-->
     </div><!--end container-->
 <!--hidden messages-->
